7-Pre_processor directives/.metadata/.plugins/org.eclipse.cdt.ui/Examples.build.log
00:54:59 **** Incremental Build of configuration Debug for project Examples ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c: In function 'main':
../main.c:26:14: error: 'Y' undeclared (first use in this function)
 #define X (4+Y)
              ^
../main.c:27:12: note: in expansion of macro 'X'
 #define Y (X+4)
            ^
../main.c:30:17: note: in expansion of macro 'Y'
  printf("%d\n", Y+3);
                 ^
../main.c:26:14: note: each undeclared identifier is reported only once for each function it appears in
 #define X (4+Y)
              ^
../main.c:27:12: note: in expansion of macro 'X'
 #define Y (X+4)
            ^
../main.c:30:17: note: in expansion of macro 'Y'
  printf("%d\n", Y+3);
                 ^
make: *** [main.o] Error 1

00:54:59 Build Finished (took 611ms)

